chore(setup): create Notes md and configure sonar cloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.host.url=https://sonarcloud.io
 sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.links.scm=https://github.ibm.com/xpfarm/claudio-dutra-nodejs-template
+sonar.links.scm=https://github.com/ClaudioDutra/NATO-phonetic-alphabet-xpfarm-6kyu
 sonar.organization=xp-farm-claudio-dutra
-sonar.projectKey=cbd_claudio-dutra-nodejs-template
+sonar.projectKey=cbd_NATO-phonetic-alphabet-xpfarm-6kyu
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.tests=test
